--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
                                     <a href="https://github.com/dscmitaoe" target="_blank" rel="noreferrer">View source</a>
                                 </li>
                                 <li>
-                                    <a href="mailto:dsc@dmitaoe.ac.in" target="_blank" rel="noreferrer">Contact Us</a>
+                                    <a href="mailto:dsc@mitaoe.ac.in" target="_blank" rel="noreferrer">Contact Us</a>
                                 </li>
                             </ul>
                         </div>
