--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                         <div class="info">
                             <div class="title">
                                 <h5>Amey Nerker</h5>
-                                <p>DSC Lead</p>
+                                <p>ex-DSC Lead</p>
                             </div>
                             <div class="desc">I'm social innovator who enjoys building things that impact the community. I develop exceptional products and deploy those in the community around.!
                         </div>
