--- a/apply.html
+++ b/apply.html
@@ -53,7 +53,7 @@
     .faq p{
         font-size: 18px;
     }
-    @media screen and (min-height:768px) {
+    @media screen and (min-width:768px) {
         .cbtn{
             text-align: center;
         }
